--- a/moovitz-frontend/src/app/globals.css
+++ b/moovitz-frontend/src/app/globals.css
@@ -4,7 +4,7 @@
 
 @layer base {
   :root {
-    --background: 0 0% 11%;
+    --background: 0 0 11%;
     --foreground: 0 0% 100%;
     --card: 0 0% 100%;
     --card-foreground: 222.2 84% 4.9%;
@@ -64,6 +64,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    --font-oxygen: 'Oxygen', sans-serif;
   }
 }
